[gd_scene load_steps=7 format=3 uid="uid://cuvw7cifl43gb"]

[ext_resource type="Script" path="res://WildJam_64/ASSETS/Characters/QueefsPlayerCharacter/PlayeScriptr.gd" id="1_abd12"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_34wnd"]
albedo_color = Color(0.219608, 1, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_i54pw"]
material = SubResource("StandardMaterial3D_34wnd")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bj0j4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w7so5"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ed1sa"]
material = SubResource("StandardMaterial3D_w7so5")

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_abd12")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_i54pw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_bj0j4")

[node name="PlayerLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, -1)
light_color = Color(0.745098, 0.501961, 0, 1)
light_energy = 0.5
light_cull_mask = 4294966273
shadow_enabled = true

[node name="PlayerOrigin" type="Node3D" parent="."]

[node name="WorldCam" type="Camera3D" parent="PlayerOrigin"]
transform = Transform3D(1, 0, 0, 0, 0.875279, 0.483619, 0, -0.483619, 0.875279, 0, 7.68252, 6.77029)
cull_mask = 1047553
current = true

[node name="PlayerGUI" type="Control" parent="PlayerOrigin/WorldCam"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="PlayerOrigin/WorldCam/PlayerGUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="PlayerOrigin/WorldCam/PlayerGUI/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="PlayerHUDCam" type="Camera3D" parent="PlayerOrigin/WorldCam/PlayerGUI/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.856195, 0.516653, 0, -0.516653, 0.856195, 0, 7.97254, 4.71161)
cull_mask = 1047554

[node name="MouseCast" type="RayCast3D" parent="PlayerOrigin/WorldCam"]

[node name="AttackDirection" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0.2, 0, -0.7)
mesh = SubResource("BoxMesh_ed1sa")
